# VulkanAndroidSample

app/: Android.mk  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  compute.cpp  log.h  main.cpp  spirv.inc  vkcompute.cpp  vkcompute.h
app/src/main/res/values/: strings.xml
shader/: buf_and_img.cl  sampler.sh  sampler_map
